--- a/stylesheet.css
+++ b/stylesheet.css
@@ -12,6 +12,14 @@ h2{
   margin: 2px;
 }
 
+@media only screen and (max-width: 600px) {
+  .card{
+    width: 20%;
+    height: 20%;
+    margin: 2px;
+  }
+}
+
 .clickable{
   width: 116px;
   height: 60px;
